--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "devDependencies": {
     "jasmine-core": "^2.2.0",
     "karma": "^0.12.31",
-    "karma-firefox-launcher": "^1.0.0",
-    "karma-jasmine": "^0.3.5"
+    "karma-jasmine": "^0.3.5",
+    "karma-firefox-launcher": "^1.0.0"
   }
 }
